--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -30,5 +30,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-inline-source": "^4.0.0",
+    "gulp-replace": "^1.0.0",
+    "rimraf": "^3.0.2"
   }
 }
