--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -4,6 +4,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "web": "expo start --web",
+    "build": "expo build:web",
+    "export": "node exportFrontEnd.js",
     "start": "react-native start",
     "test": "jest"
   },
@@ -12,6 +14,7 @@
     "expo-splash-screen": "^0.5.0",
     "expo-status-bar": "^1.0.0",
     "expo-updates": "~0.2.10",
+    "graphql": "^15.3.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "~0.62.2",
@@ -26,8 +29,13 @@
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "babel-jest": "~25.2.6",
+    "expo-cli": "^3.27.8",
+    "gulp": "^4.0.2",
+    "gulp-inline-source": "^4.0.0",
+    "gulp-replace": "^1.0.0",
     "jest": "~25.2.6",
-    "react-test-renderer": "~16.11.0"
+    "react-test-renderer": "~16.11.0",
+    "rimraf": "^3.0.2"
   },
   "jest": {
     "preset": "react-native"
