--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -24,7 +24,8 @@
     "react-native-unimodules": "~0.10.1",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-loop": "^6.0.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
