--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "server",
+  "name": "grademe-server",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
+  "files": [
+    "client",
+    "src",
+    "../DB"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "devStart": "nodemon src/index.js"
+    "devStart": "nodemon src/index.js",
+    "build": "pkg ."
   },
+  "bin": "src/index.js",
   "author": "",
   "license": "ISC",
   "devDependencies": {
