--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,8 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: grademe:latest
+          # tags: grademe:latest
+          tags: ghcr.io/${{ github.repository_owner }}/grademe:latest
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
