--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -38,6 +38,7 @@
     "babel-jest": "~25.2.6",
     "expo-cli": "^3.27.8",
     "jest": "~25.2.6",
+    "react-native-material-ui": "^1.30.1",
     "react-test-renderer": "~16.11.0",
     "rimraf": "^3.0.2"
   },
